--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.+'
     compile 'com.android.support:recyclerview-v7:25.+'
     compile "com.android.support:recyclerview-v7:25.3.1"
+    compile group: 'cz.msebera.android', name: 'httpclient', version: '4.4.1.1'
+    compile 'com.afollestad.material-dialogs:core:0.8.6.1'
+
 
 }
