--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,14 @@ dependencies {
     compile "com.android.support:recyclerview-v7:25.3.1"
     compile group: 'cz.msebera.android', name: 'httpclient', version: '4.4.1.1'
     compile 'com.afollestad.material-dialogs:core:0.8.6.1'
+    // RecyclerView
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    // retrofit, gson
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    // glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
 
 }
