--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     compile "com.android.support:recyclerview-v7:25.3.1"
     compile group: 'cz.msebera.android', name: 'httpclient', version: '4.4.1.1'
     compile 'com.afollestad.material-dialogs:core:0.8.6.1'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+
     // RecyclerView
     compile 'com.android.support:recyclerview-v7:25.3.1'
     // retrofit, gson
