--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile group: 'cz.msebera.android', name: 'httpclient', version: '4.4.1.1'
     compile 'com.afollestad.material-dialogs:core:0.8.6.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     // RecyclerView
     compile 'com.android.support:recyclerview-v7:25.3.1'
