--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.yarolegovich:lovely-dialog:1.0.7'
+
 
 
 }
