--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 repositories {
@@ -49,7 +61,6 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.8.6.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     // RecyclerView
     compile 'com.android.support:recyclerview-v7:25.3.1'
     // retrofit, gson
@@ -59,6 +70,15 @@ dependencies {
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.yarolegovich:lovely-dialog:1.0.7'
+
+
+
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.7.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+    compile 'pub.devrel:easypermissions:0.2.0'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
 
 
 
