--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.basimahmad.smartjournalism"
         minSdkVersion 19
@@ -44,11 +44,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    annotationProcessor 'com.google.auto.value:auto-value:1.1'
+
+
+
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    annotationProcessor 'com.jakewharton:butterknife:6.1.0'
     compile 'me.spark:submitbutton:1.0.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.github.medyo:fancybuttons:1.8.4'
@@ -71,7 +76,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.yarolegovich:lovely-dialog:1.0.7'
 
-
+    compile 'com.google.firebase:firebase-core:9.6.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
@@ -80,6 +85,13 @@ dependencies {
     compile 'pub.devrel:easypermissions:0.2.0'
     compile 'com.firebase:firebase-client-android:2.5.2+'
 
+    compile 'com.google.firebase:firebase-messaging:9.6.0'
+
+
+
+
+    compile project(path: ':libstreaming')
 
 
 }
+apply plugin: 'com.google.gms.google-services'
