--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+contact me on whatsapp 00923335490356 and dont mention assignment or whatsapp on fiverr
